Phase 2/parser.output
Grammar

    0 $accept: FinalNode $end

    1 FinalNode: File

    2 File: ImportList ListOfStatem ListofFunctions
    3     | ListOfStatem ListofFunctions
    4     | ListofFunctions
    5     | ImportList ListofFunctions

    6 ImportList: Import
    7           | ImportList Import

    8 Import: IMPORT ID STOP

    9 ListofFunctions: Function
   10                | ListofFunctions Function

   11 Function: DEF ID OC VoidableArgList CC OF ListOfCode CF

   12 ArgList: Vartype ID
   13        | ArgList COMMA Vartype ID

   14 VoidableArgList: VOID
   15                | ArgList

   16 ListOfCode: Code
   17           | ListOfCode Code

   18 Code: ListOfStatem
   19     | Conditional
   20     | Loop
   21     | Return
   22     | Break
   23     | TernaryOp

   24 Loop: ForLoop
   25     | WhileLoop

   26 TernaryOp: Statement QUEST Statement COLON Statement STOP

   27 ForLoop: FOR OC Voidable SCOMMA Expression SCOMMA Voidable CC OF ListOfCode CF

   28 WhileLoop: WHILE OC VoidableSingleStatement CC OF ListOfCode CF

   29 Return: RETURN VOID STOP
   30       | RETURN ListOfExpr STOP

   31 Break: BREAK STOP

   32 VoidableSingleStatement: VOID
   33                        | Statement

   34 Voidable: VOID
   35         | ListOfStatem

   36 Conditional: IF OC Expression CC OF ListOfCode CF
   37            | IF OC Expression CC OF ListOfCode CF Else_Block

   38 Else_Block: Else_Piece
   39           | Elif_Piece
   40           | Elif_Piece Else_Block

   41 Elif_Piece: ELIF OC Expression CC OF ListOfCode CF

   42 Else_Piece: ELSE OF ListOfCode CF

   43 ListOfStatem: ListOfStatem STOP Statement
   44             | Statement

   45 Statement: Expression
   46          | Location AsignOp Expression
   47          | Vartype ID AsignOp Expression
   48          | Initialization

   49 Initialization: Vartype ID
   50               | ARRAY Vartype ID OS Expression CS
   51               | ARRAY Vartype ID OS Expression COMMA Expression CS

   52 AsignOp: ASGN
   53        | PASGN
   54        | SASGN

   55 Expression: Location
   56           | Literal
   57           | Expression ADD Expression
   58           | Expression SUB Expression
   59           | Expression MULT Expression
   60           | Expression DIV Expression
   61           | Expression MOD Expression
   62           | Expression LEQ Expression
   63           | Expression GEQ Expression
   64           | Expression GT Expression
   65           | Expression EQ Expression
   66           | Expression LT Expression
   67           | Expression NEQ Expression
   68           | Expression AND Expression
   69           | Expression OR Expression
   70           | OC Expression CC
   71           | NOT Expression
   72           | SUB Expression
   73           | MethodCall

   74 Location: ID
   75         | ID OS Expression CS
   76         | ID OS Expression COMMA Expression CS

   77 Literal: INTL
   78        | TRUE
   79        | FALSE
   80        | CHAR
   81        | UINTL

   82 Vartype: TINT
   83        | TUINT
   84        | TBOOL
   85        | TCHAR

   86 MethodCall: ID OC CC
   87           | ID OC ListOfExpr CC

   88 ListOfExpr: Expression
   89           | ListOfExpr COMMA Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ARRAY (258) 50 51
RETURN (259) 29 30
BREAK (260) 31
IMPORT (261) 8
IF (262) 36 37
ELIF (263) 41
ELSE (264) 42
FOR (265) 27
WHILE (266) 28
DEF (267) 11
NOT (268) 71
SCOMMA (269) 27
COMMA (270) 13 51 76 89
OF (271) 11 27 28 36 37 41 42
CF (272) 11 27 28 36 37 41 42
OC (273) 11 27 28 36 37 41 70 86 87
CC (274) 11 27 28 36 37 41 70 86 87
OS (275) 50 51 75 76
CS (276) 50 51 75 76
QUEST (277) 26
COLON (278) 26
ADD (279) 57
DIV (280) 60
EQ (281) 65
GEQ (282) 63
GT (283) 64
LEQ (284) 62
LT (285) 66
MULT (286) 59
NEQ (287) 67
SUB (288) 58 72
AND (289) 68
OR (290) 69
MOD (291) 61
INTL (292) 77
UINTL (293) 81
CHAR (294) 80
TRUE (295) 78
FALSE (296) 79
ID (297) 8 11 12 13 47 49 50 51 74 75 76 86 87
VOID (298) 14 29 32 34
TINT (299) 82
TUINT (300) 83
TCHAR (301) 85
TBOOL (302) 84
STOP (303) 8 26 29 30 31 43
ASGN (304) 52
PASGN (305) 53
SASGN (306) 54
STATEMENT (307)
LOCID (308)
EXPRESSIONVSEXPRESSION (309)
EXPRESSIONVSLOCASGNEXP (310)
UMINUS (311)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
FinalNode (58)
    on left: 1, on right: 0
File (59)
    on left: 2 3 4 5, on right: 1
ImportList (60)
    on left: 6 7, on right: 2 5 7
Import (61)
    on left: 8, on right: 6 7
ListofFunctions (62)
    on left: 9 10, on right: 2 3 4 5 10
Function (63)
    on left: 11, on right: 9 10
ArgList (64)
    on left: 12 13, on right: 13 15
VoidableArgList (65)
    on left: 14 15, on right: 11
ListOfCode (66)
    on left: 16 17, on right: 11 17 27 28 36 37 41 42
Code (67)
    on left: 18 19 20 21 22 23, on right: 16 17
Loop (68)
    on left: 24 25, on right: 20
TernaryOp (69)
    on left: 26, on right: 23
ForLoop (70)
    on left: 27, on right: 24
WhileLoop (71)
    on left: 28, on right: 25
Return (72)
    on left: 29 30, on right: 21
Break (73)
    on left: 31, on right: 22
VoidableSingleStatement (74)
    on left: 32 33, on right: 28
Voidable (75)
    on left: 34 35, on right: 27
Conditional (76)
    on left: 36 37, on right: 19
Else_Block (77)
    on left: 38 39 40, on right: 37 40
Elif_Piece (78)
    on left: 41, on right: 39 40
Else_Piece (79)
    on left: 42, on right: 38
ListOfStatem (80)
    on left: 43 44, on right: 2 3 18 35 43
Statement (81)
    on left: 45 46 47 48, on right: 26 33 43 44
Initialization (82)
    on left: 49 50 51, on right: 48
AsignOp (83)
    on left: 52 53 54, on right: 46 47
Expression (84)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73, on right: 27 36 37 41 45 46 47 50 51 57 58 59 60 61 62 63 64
    65 66 67 68 69 70 71 72 75 76 88 89
Location (85)
    on left: 74 75 76, on right: 46 55
Literal (86)
    on left: 77 78 79 80 81, on right: 56
Vartype (87)
    on left: 82 83 84 85, on right: 12 13 47 49 50 51
MethodCall (88)
    on left: 86 87, on right: 73
ListOfExpr (89)
    on left: 88 89, on right: 30 87 89


State 0

    0 $accept: . FinalNode $end

    ARRAY   shift, and go to state 1
    IMPORT  shift, and go to state 2
    DEF     shift, and go to state 3
    NOT     shift, and go to state 4
    OC      shift, and go to state 5
    SUB     shift, and go to state 6
    INTL    shift, and go to state 7
    UINTL   shift, and go to state 8
    CHAR    shift, and go to state 9
    TRUE    shift, and go to state 10
    FALSE   shift, and go to state 11
    ID      shift, and go to state 12
    TINT    shift, and go to state 13
    TUINT   shift, and go to state 14
    TCHAR   shift, and go to state 15
    TBOOL   shift, and go to state 16

    FinalNode        go to state 17
    File             go to state 18
    ImportList       go to state 19
    Import           go to state 20
    ListofFunctions  go to state 21
    Function         go to state 22
    ListOfStatem     go to state 23
    Statement        go to state 24
    Initialization   go to state 25
    Expression       go to state 26
    Location         go to state 27
    Literal          go to state 28
    Vartype          go to state 29
    MethodCall       go to state 30


State 1

   50 Initialization: ARRAY . Vartype ID OS Expression CS
   51               | ARRAY . Vartype ID OS Expression COMMA Expression CS

    TINT   shift, and go to state 13
    TUINT  shift, and go to state 14
    TCHAR  shift, and go to state 15
    TBOOL  shift, and go to state 16

    Vartype  go to state 31


State 2

    8 Import: IMPORT . ID STOP

    ID  shift, and go to state 32


State 3

   11 Function: DEF . ID OC VoidableArgList CC OF ListOfCode CF

    ID  shift, and go to state 33


State 4

   71 Expression: NOT . Expression

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 34
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 5

   70 Expression: OC . Expression CC

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 36
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 6

   72 Expression: SUB . Expression

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 37
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 7

   77 Literal: INTL .

    $default  reduce using rule 77 (Literal)


State 8

   81 Literal: UINTL .

    $default  reduce using rule 81 (Literal)


State 9

   80 Literal: CHAR .

    $default  reduce using rule 80 (Literal)


State 10

   78 Literal: TRUE .

    $default  reduce using rule 78 (Literal)


State 11

   79 Literal: FALSE .

    $default  reduce using rule 79 (Literal)


State 12

   74 Location: ID .
   75         | ID . OS Expression CS
   76         | ID . OS Expression COMMA Expression CS
   86 MethodCall: ID . OC CC
   87           | ID . OC ListOfExpr CC

    OC  shift, and go to state 38
    OS  shift, and go to state 39

    $default  reduce using rule 74 (Location)


State 13

   82 Vartype: TINT .

    $default  reduce using rule 82 (Vartype)


State 14

   83 Vartype: TUINT .

    $default  reduce using rule 83 (Vartype)


State 15

   85 Vartype: TCHAR .

    $default  reduce using rule 85 (Vartype)


State 16

   84 Vartype: TBOOL .

    $default  reduce using rule 84 (Vartype)


State 17

    0 $accept: FinalNode . $end

    $end  shift, and go to state 40


State 18

    1 FinalNode: File .

    $default  reduce using rule 1 (FinalNode)


State 19

    2 File: ImportList . ListOfStatem ListofFunctions
    5     | ImportList . ListofFunctions
    7 ImportList: ImportList . Import

    ARRAY   shift, and go to state 1
    IMPORT  shift, and go to state 2
    DEF     shift, and go to state 3
    NOT     shift, and go to state 4
    OC      shift, and go to state 5
    SUB     shift, and go to state 6
    INTL    shift, and go to state 7
    UINTL   shift, and go to state 8
    CHAR    shift, and go to state 9
    TRUE    shift, and go to state 10
    FALSE   shift, and go to state 11
    ID      shift, and go to state 12
    TINT    shift, and go to state 13
    TUINT   shift, and go to state 14
    TCHAR   shift, and go to state 15
    TBOOL   shift, and go to state 16

    Import           go to state 41
    ListofFunctions  go to state 42
    Function         go to state 22
    ListOfStatem     go to state 43
    Statement        go to state 24
    Initialization   go to state 25
    Expression       go to state 26
    Location         go to state 27
    Literal          go to state 28
    Vartype          go to state 29
    MethodCall       go to state 30


State 20

    6 ImportList: Import .

    $default  reduce using rule 6 (ImportList)


State 21

    4 File: ListofFunctions .
   10 ListofFunctions: ListofFunctions . Function

    DEF  shift, and go to state 3

    $default  reduce using rule 4 (File)

    Function  go to state 44


State 22

    9 ListofFunctions: Function .

    $default  reduce using rule 9 (ListofFunctions)


State 23

    3 File: ListOfStatem . ListofFunctions
   43 ListOfStatem: ListOfStatem . STOP Statement

    DEF   shift, and go to state 3
    STOP  shift, and go to state 45

    ListofFunctions  go to state 46
    Function         go to state 22


State 24

   44 ListOfStatem: Statement .

    $default  reduce using rule 44 (ListOfStatem)


State 25

   48 Statement: Initialization .

    $default  reduce using rule 48 (Statement)


State 26

   45 Statement: Expression .
   57 Expression: Expression . ADD Expression
   58           | Expression . SUB Expression
   59           | Expression . MULT Expression
   60           | Expression . DIV Expression
   61           | Expression . MOD Expression
   62           | Expression . LEQ Expression
   63           | Expression . GEQ Expression
   64           | Expression . GT Expression
   65           | Expression . EQ Expression
   66           | Expression . LT Expression
   67           | Expression . NEQ Expression
   68           | Expression . AND Expression
   69           | Expression . OR Expression

    ADD   shift, and go to state 47
    DIV   shift, and go to state 48
    EQ    shift, and go to state 49
    GEQ   shift, and go to state 50
    GT    shift, and go to state 51
    LEQ   shift, and go to state 52
    LT    shift, and go to state 53
    MULT  shift, and go to state 54
    NEQ   shift, and go to state 55
    SUB   shift, and go to state 56
    AND   shift, and go to state 57
    OR    shift, and go to state 58
    MOD   shift, and go to state 59

    $default  reduce using rule 45 (Statement)


State 27

   46 Statement: Location . AsignOp Expression
   55 Expression: Location .

    ASGN   shift, and go to state 60
    PASGN  shift, and go to state 61
    SASGN  shift, and go to state 62

    $default  reduce using rule 55 (Expression)

    AsignOp  go to state 63


State 28

   56 Expression: Literal .

    $default  reduce using rule 56 (Expression)


State 29

   47 Statement: Vartype . ID AsignOp Expression
   49 Initialization: Vartype . ID

    ID  shift, and go to state 64


State 30

   73 Expression: MethodCall .

    $default  reduce using rule 73 (Expression)


State 31

   50 Initialization: ARRAY Vartype . ID OS Expression CS
   51               | ARRAY Vartype . ID OS Expression COMMA Expression CS

    ID  shift, and go to state 65


State 32

    8 Import: IMPORT ID . STOP

    STOP  shift, and go to state 66


State 33

   11 Function: DEF ID . OC VoidableArgList CC OF ListOfCode CF

    OC  shift, and go to state 67


State 34

   57 Expression: Expression . ADD Expression
   58           | Expression . SUB Expression
   59           | Expression . MULT Expression
   60           | Expression . DIV Expression
   61           | Expression . MOD Expression
   62           | Expression . LEQ Expression
   63           | Expression . GEQ Expression
   64           | Expression . GT Expression
   65           | Expression . EQ Expression
   66           | Expression . LT Expression
   67           | Expression . NEQ Expression
   68           | Expression . AND Expression
   69           | Expression . OR Expression
   71           | NOT Expression .

    $default  reduce using rule 71 (Expression)


State 35

   55 Expression: Location .

    $default  reduce using rule 55 (Expression)


State 36

   57 Expression: Expression . ADD Expression
   58           | Expression . SUB Expression
   59           | Expression . MULT Expression
   60           | Expression . DIV Expression
   61           | Expression . MOD Expression
   62           | Expression . LEQ Expression
   63           | Expression . GEQ Expression
   64           | Expression . GT Expression
   65           | Expression . EQ Expression
   66           | Expression . LT Expression
   67           | Expression . NEQ Expression
   68           | Expression . AND Expression
   69           | Expression . OR Expression
   70           | OC Expression . CC

    CC    shift, and go to state 68
    ADD   shift, and go to state 47
    DIV   shift, and go to state 48
    EQ    shift, and go to state 49
    GEQ   shift, and go to state 50
    GT    shift, and go to state 51
    LEQ   shift, and go to state 52
    LT    shift, and go to state 53
    MULT  shift, and go to state 54
    NEQ   shift, and go to state 55
    SUB   shift, and go to state 56
    AND   shift, and go to state 57
    OR    shift, and go to state 58
    MOD   shift, and go to state 59


State 37

   57 Expression: Expression . ADD Expression
   58           | Expression . SUB Expression
   59           | Expression . MULT Expression
   60           | Expression . DIV Expression
   61           | Expression . MOD Expression
   62           | Expression . LEQ Expression
   63           | Expression . GEQ Expression
   64           | Expression . GT Expression
   65           | Expression . EQ Expression
   66           | Expression . LT Expression
   67           | Expression . NEQ Expression
   68           | Expression . AND Expression
   69           | Expression . OR Expression
   72           | SUB Expression .

    $default  reduce using rule 72 (Expression)


State 38

   86 MethodCall: ID OC . CC
   87           | ID OC . ListOfExpr CC

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    CC     shift, and go to state 69
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 70
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30
    ListOfExpr  go to state 71


State 39

   75 Location: ID OS . Expression CS
   76         | ID OS . Expression COMMA Expression CS

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 72
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 40

    0 $accept: FinalNode $end .

    $default  accept


State 41

    7 ImportList: ImportList Import .

    $default  reduce using rule 7 (ImportList)


State 42

    5 File: ImportList ListofFunctions .
   10 ListofFunctions: ListofFunctions . Function

    DEF  shift, and go to state 3

    $default  reduce using rule 5 (File)

    Function  go to state 44


State 43

    2 File: ImportList ListOfStatem . ListofFunctions
   43 ListOfStatem: ListOfStatem . STOP Statement

    DEF   shift, and go to state 3
    STOP  shift, and go to state 45

    ListofFunctions  go to state 73
    Function         go to state 22


State 44

   10 ListofFunctions: ListofFunctions Function .

    $default  reduce using rule 10 (ListofFunctions)


State 45

   43 ListOfStatem: ListOfStatem STOP . Statement

    ARRAY  shift, and go to state 1
    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12
    TINT   shift, and go to state 13
    TUINT  shift, and go to state 14
    TCHAR  shift, and go to state 15
    TBOOL  shift, and go to state 16

    Statement       go to state 74
    Initialization  go to state 25
    Expression      go to state 26
    Location        go to state 27
    Literal         go to state 28
    Vartype         go to state 29
    MethodCall      go to state 30


State 46

    3 File: ListOfStatem ListofFunctions .
   10 ListofFunctions: ListofFunctions . Function

    DEF  shift, and go to state 3

    $default  reduce using rule 3 (File)

    Function  go to state 44


State 47

   57 Expression: Expression ADD . Expression

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 75
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 48

   60 Expression: Expression DIV . Expression

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 76
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 49

   65 Expression: Expression EQ . Expression

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 77
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 50

   63 Expression: Expression GEQ . Expression

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 78
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 51

   64 Expression: Expression GT . Expression

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 79
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 52

   62 Expression: Expression LEQ . Expression

    NOT    shift, and go to state 4
    OC     shift, and go to state 5
    SUB    shift, and go to state 6
    INTL   shift, and go to state 7
    UINTL  shift, and go to state 8
    CHAR   shift, and go to state 9
    TRUE   shift, and go to state 10
    FALSE  shift, and go to state 11
    ID     shift, and go to state 12

    Expression  go to state 80
    Location    go to state 35
    Literal     go to state 28
    MethodCall  go to state 30


State 53

   66 Expression: Expression LT . Expression
